tests/int/why_command/snapshots/integration__int__why_command__flags__should_why_format_grouped.snap
---
source: tests/int/why_command/flags.rs
info:
  program: crawk
  args:
    - why
    - "-r"
    - parser
    - reference
    - "-f"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
parser
  crate::reference::PathPrefix
  crate::reference::TypeReference

parser::visitor
  crate::reference::GroupItem
  crate::reference::GroupItem::Aliased
  crate::reference::GroupItem::Glob
  crate::reference::GroupItem::Simple
  crate::reference::PathPrefix
  crate::reference::PathPrefix::None
  crate::reference::PathPrefix::Super
  crate::reference::TypeReference

----- stderr -----
