tests/int/why_command/snapshots/integration__int__why_command__flags__should_why_format_plain_explicit.snap
---
source: tests/int/why_command/flags.rs
info:
  program: crawk
  args:
    - why
    - analyzer
    - reference
    - "-f"
    - plain
---
success: true
exit_code: 0
----- stdout -----
crate::reference::GroupItem
crate::reference::PathPrefix
crate::reference::PathSuffix
crate::reference::TypeReference

----- stderr -----
