tests/int/why_command/snapshots/integration__int__why_command__flags__should_why_recursive.snap
---
source: tests/int/why_command/flags.rs
info:
  program: crawk
  args:
    - why
    - "-r"
    - parser
    - reference
---
success: true
exit_code: 0
----- stdout -----
crate::reference::GroupItem
crate::reference::GroupItem::Aliased
crate::reference::GroupItem::Glob
crate::reference::GroupItem::Simple
crate::reference::PathPrefix
crate::reference::PathPrefix::None
crate::reference::PathPrefix::Super
crate::reference::TypeReference

----- stderr -----
