tests/int/why_command/snapshots/integration__int__why_command__flags__should_why_recursive_fixture.snap
---
source: tests/int/why_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - why
    - "-r"
    - engine
    - config
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
